# wjson

./: .gitignore  justfile  perf.py  pyproject.toml
tests/: large.json  test_parsing.py  test_tokenizer.py
wjson/: exceptions.py  parser.py  tokenizer.py
